@@ -6,4 +6,9 @@ dist_shared_DATA = $(srcdir)/gupnp-universal-cp.glade \
 		   $(srcdir)/gupnp-network-light.glade \
 		   $(srcdir)/gupnp-av-cp.glade
 
+desktopdir = ${datadir}/applications
+dist_desktop_DATA = gupnp-universal-cp.desktop \
+		    gupnp-av-cp.desktop \
+		    gupnp-network-light.desktop
+
 MAINTAINERCLEANFILES = Makefile.in
