@@ -1,0 +1,8 @@
+[Desktop Entry]
+Encoding=UTF-8
+Name=UPnP Universal Control Point
+Categories=GTK;Development;
+Exec=gupnp-universal-cp
+Terminal=false
+Type=Application
+StartupNotify=true
