@@ -1,3 +1,13 @@
+2007-11-05  Zeeshan Ali Khattak  <zeenix@gstreamer.net>
+	    Ross Burton <ross@openedhand.com>
+
+	* data/Makefile.am:
+	* data/gupnp-av-cp.desktop:
+	* data/gupnp-network-light.desktop:
+	* data/gupnp-universal-cp.desktop:
+
+	Add a desktop file for each tool.
+
 2007-11-04  Zeeshan Ali Khattak  <zeenix@gstreamer.net>
 
 	* src/av-cp/playlist-treeview.c:
